@@ -21,9 +21,9 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class ReservationServiceImpl implements ReservationService {
 
     private final ReservationRepository reservationRepository;
@@ -36,6 +36,8 @@ public class ReservationServiceImpl implements ReservationService {
     @Override
     @Transactional
     public ReservationResponseDto createReservation(Long touristId, ReservationRequestDto request) {
+        log.debug("Creating reservation for tourist with ID: {}", touristId);
+
         Tourist tourist = touristRepository.findById(touristId)
                 .orElseThrow(() -> new ResourceNotFoundException("Tourist not found"));
 
@@ -54,9 +56,7 @@ public class ReservationServiceImpl implements ReservationService {
         reservation.setStatus(ReservationStatus.PENDING);
 
         Reservation savedReservation = reservationRepository.save(reservation);
-
-        // Send email to tourist
-        //emailService.sendReservationConfirmationEmail(tourist.getEmail(), savedReservation);
+        log.info("Reservation created successfully with ID: {}", savedReservation.getId());
 
         return reservationMapper.toResponseDto(savedReservation);
     }
@@ -64,6 +64,8 @@ public class ReservationServiceImpl implements ReservationService {
     @Override
     @Transactional
     public void cancelReservation(Long reservationId) {
+        log.debug("Cancelling reservation with ID: {}", reservationId);
+
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new ResourceNotFoundException("Reservation not found"));
 
@@ -71,18 +73,23 @@ public class ReservationServiceImpl implements ReservationService {
         reservationRepository.save(reservation);
 
         emailService.sendReservationCancellationEmail(reservation.getTourist().getEmail(), reservation);
+        log.info("Reservation cancelled successfully with ID: {}", reservationId);
     }
 
     @Override
     public List<ReservationResponseDto> getAllReservations() {
+        log.debug("Fetching all reservations");
+
         return reservationRepository.findAll().stream()
                 .map(reservationMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
     public ReservationResponseDto assignGuideToReservation(Long reservationId, AssignGuideRequestDto request) {
+        log.debug("Assigning guide to reservation with ID: {}", reservationId);
+
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new ResourceNotFoundException("Reservation not found"));
 
@@ -90,11 +97,11 @@ public class ReservationServiceImpl implements ReservationService {
                 .orElseThrow(() -> new ResourceNotFoundException("Guide not found"));
 
         reservation.setGuide(guide);
-        reservation.setStatus(ReservationStatus.APPROVED); // Set status to APPROVED
+        reservation.setStatus(ReservationStatus.APPROVED);
         Reservation updatedReservation = reservationRepository.save(reservation);
 
-        // Send email to guide
         emailService.sendGuideAssignmentEmail(guide.getEmail(), updatedReservation);
+        log.info("Guide assigned successfully to reservation with ID: {}", reservationId);
 
         return reservationMapper.toResponseDto(updatedReservation);
     }
@@ -102,6 +109,8 @@ public class ReservationServiceImpl implements ReservationService {
     @Override
     @Transactional
     public ReservationResponseDto approveReservation(Long reservationId) {
+        log.debug("Approving reservation with ID: {}", reservationId);
+
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new ResourceNotFoundException("Reservation not found"));
 
@@ -109,6 +118,7 @@ public class ReservationServiceImpl implements ReservationService {
         Reservation updatedReservation = reservationRepository.save(reservation);
 
         emailService.sendReservationApprovalEmail(reservation.getTourist().getEmail(), updatedReservation);
+        log.info("Reservation approved successfully with ID: {}", reservationId);
 
         return reservationMapper.toResponseDto(updatedReservation);
     }
@@ -116,6 +126,8 @@ public class ReservationServiceImpl implements ReservationService {
     @Override
     @Transactional
     public ReservationResponseDto cancelReservationByAdmin(Long reservationId) {
+        log.debug("Cancelling reservation by admin with ID: {}", reservationId);
+
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new ResourceNotFoundException("Reservation not found"));
 
@@ -123,18 +135,22 @@ public class ReservationServiceImpl implements ReservationService {
         Reservation updatedReservation = reservationRepository.save(reservation);
 
         emailService.sendReservationCancellationEmail(reservation.getTourist().getEmail(), updatedReservation);
+        log.info("Reservation cancelled by admin successfully with ID: {}", reservationId);
 
         return reservationMapper.toResponseDto(updatedReservation);
     }
 
     @Override
     public long getTotalReservations() {
+        log.debug("Fetching total number of reservations");
+
         return reservationRepository.count();
     }
 
-
     @Override
     public ReservationStatisticsResponseDto getReservationStatistics() {
+        log.debug("Fetching reservation statistics");
+
         long totalReservations = reservationRepository.count();
         long totalPendingReservations = reservationRepository.countByStatus(ReservationStatus.PENDING);
 
@@ -144,19 +160,24 @@ public class ReservationServiceImpl implements ReservationService {
         return new ReservationStatisticsResponseDto(totalReservations, totalPendingReservations);
     }
 
+    @Override
     public ReservationResponseDto notifyGuideAboutLatestReservation(Long guideId) {
+        log.debug("Notifying guide with ID: {} about latest reservation", guideId);
+
         Optional<Reservation> lastReservation = reservationRepository.findFirstByGuideIdOrderByReservationDateDesc(guideId);
 
         if (lastReservation.isPresent()) {
             Reservation reservation = lastReservation.get();
             return reservationMapper.toResponseDto(reservation);
         } else {
-            throw new RuntimeException("No reservations found for guide " + guideId);
+            throw new ResourceNotFoundException("No reservations found for guide " + guideId);
         }
     }
 
     @Override
     public List<ReservationResponseDto> getAllByTouristId(Long touristId) {
+        log.debug("Fetching all reservations for tourist with ID: {}", touristId);
+
         List<Reservation> reservations = reservationRepository.getByTouristId(touristId);
 
         if (reservations.isEmpty()) {
@@ -166,5 +187,12 @@ public class ReservationServiceImpl implements ReservationService {
         return reservations.stream()
                 .map(reservationMapper::toResponseDto)
                 .collect(Collectors.toList());
+    }
+
+    @Override
+    public int getReservationCountByTouristId(Long touristId) {
+        log.debug("Fetching reservation count for tourist with ID: {}", touristId);
+
+        return reservationRepository.countByTouristId(touristId);
     }
 }
